[tool.poetry]
name = "shafigullinik_page_loader"
version = "0.1.3"
description = ""
authors = ["shafigullinik <shafigullin.ik@gmail.com>"]

packages = [
    { include = "page_loader" },
  ]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
